// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.Video component renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <label
      aria-hidden="true"
      className="form-input-heading above"
    >
      Is this an externally linked video?
    </label>
    <div
      className="toggle-indicator"
    >
      <div
        aria-pressed={false}
        className="boolean-primary"
        onClick={[Function]}
        role="button"
      >
        <span
          className="screen-reader-text"
        >
          Is this an externally linked video?
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-input"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Video File
      </label>
      <react-dropzone
        accept="video/*"
        className="form-dropzone style-square"
        multiple={false}
        onDrop={[Function]}
        style={undefined}
      >
        <div
          className="contents-empty"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-cloud-up"
          />
          <div
            className="message"
          >
            <p
              className="primary"
            >
              <span
                className="fake-link"
                role="button"
              >
                Upload a file
              </span>
               or 
              <br />
              drag and drop here
              <br />
            </p>
            <p
              className="secondary"
            >
              mp4, webm, flv, wmv, mov, avi
            </p>
          </div>
        </div>
      </react-dropzone>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.Video component when sub kind is external_video renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <label
      aria-hidden="true"
      className="form-input-heading above"
    >
      Is this an externally linked video?
    </label>
    <div
      className="toggle-indicator"
    >
      <div
        aria-pressed={false}
        className="boolean-primary"
        onClick={[Function]}
        role="button"
      >
        <span
          className="screen-reader-text"
        >
          Is this an externally linked video?
        </span>
      </div>
    </div>
  </div>
  <div
    className="form-section"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Video ID
      </label>
      <input
        onChange={[Function]}
        placeholder="Video ID"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-input"
    >
      <div
        className="form-input"
        style={Object {}}
      >
        <label>
          External Video Type
        </label>
        <div
          className="form-select"
        >
          <i
            aria-hidden="true"
            className="manicon manicon-caret-down"
          />
          <select
            onChange={[Function]}
            value={undefined}
          >
            <option
              value=""
            >
              Select a video source...
            </option>
            <option
              value="youtube"
            >
              Youtube
            </option>
            <option
              value="vimeo"
            >
              Vimeo
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;
